--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/add_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNoteActivity"
-    android:id="@+id/add_note">
+    android:background="#FAF3E1"
+    tools:context=".AddNoteActivity">
 
     <TextView
         android:id="@+id/txtNoteTitle"
@@ -14,6 +15,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="48dp"
         android:text="Title"
+        android:textColor="#171515"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,6 +27,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="40dp"
         android:text="Description"
+        android:textColor="#191414"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTitle" />
@@ -36,11 +39,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="20dp"
-        android:minHeight="48dp"
-
         android:height="50dp"
+
         android:ems="10"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNoteTitle"
@@ -68,6 +71,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="292dp"
         android:text="Priority"
+        android:textColor="#0E0C0C"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -78,7 +82,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNotePriority" >
-    </NumberPicker>
+        app:layout_constraintTop_toBottomOf="@+id/txtNotePriority"></NumberPicker>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
